Adding my existing site.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./res/styles.css">
     <!-- <![endif]-->
     <link type="text/plain" rel="author" href="http://clearbold.com/humans.txt">
-    <title>Clearbold: Web &amp; Mobile Design &amp; Development, Mark Reeves</title>
+    <title>Rangkaian Online</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="robots" content="index,follow,archive">
