Adding my existing site.

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <div class="wrapper-content wrapper-digital">
         <div>
             <h1>Digital know-how.</h1>
-            <p>We support established product and marketing teams as well as those just getting started.</p>
-            <p>Services include web &amp; mobile design &amp; development, <a href="http://clearbold.com/dispatchwire">email marketing</a>, app design &amp; development, online lead&nbsp;generation, and&nbsp;branding.</p>
+            <p>We specialized in connecting fully integrated infrastructure solution.</p>
+            <p>We also deliver digital latest surveillance system and recognises the importance of system uptime to ensure minimal disruption to business operations.</p>
         </div>
     </div>
     <div class="wrapper-content wrapper-mark-reeves">
