Adding my existing site.

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     </div>
     <div class="wrapper-content wrapper-digital">
         <div>
-            <h1>Digital know-how.</h1>
-            <p>We specialized in connecting fully integrated infrastructure solution.</p>
+            <h1>What we do.</h1>
+            <p>We specialized in connecting fully integrated infrastructure solution with Network Structured Cabling.</p>
             <p>We also deliver digital latest surveillance system and recognises the importance of system uptime to ensure minimal disruption to business operations.</p>
         </div>
     </div>
