--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
     <div class="wrapper-content wrapper-digital">
         <div>
             <h1>What we do.</h1>
-            <p>We specialized in connecting fully integrated infrastructure solution with Network Structured Cabling.</p>
-            <p>We also deliver digital latest surveillance system and recognises the importance of system uptime to ensure minimal disruption to business operations.</p>
+            <p>NETWORK STRUCTURED CABLING - We specialized in connecting fully integrated infrastructure solution.</p>
+            <p>INTEGRATED SECURITY AND SURVEILLANCE SYSTEM - We deliver digital latest surveillance system.</p>
+			<p>IT PREVENTIVE MAINTENANCE SERVICE - Recognises the importance of system uptime to ensure minimal disruption to business operations.</p>
         </div>
     </div>
     <div class="wrapper-content wrapper-mark-reeves">
