--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     <div class="wrapper-content wrapper-digital">
         <div>
             <h1>What we do.</h1>
-            <p>NETWORK STRUCTURED CABLING - We specialized in connecting fully integrated infrastructure solution.</p>
+			<h2>Network Structured Cabling</h2>
+            <p>We specialized in connecting fully integrated infrastructure solution.</p>
             <p>INTEGRATED SECURITY AND SURVEILLANCE SYSTEM - We deliver digital latest surveillance system.</p>
 			<p>IT PREVENTIVE MAINTENANCE SERVICE - Recognises the importance of system uptime to ensure minimal disruption to business operations.</p>
         </div>
