--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!--[if gte IE 9]><!-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./res/styles.css">
+	<link href='https://fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css'>
     <!-- <![endif]-->
     <link type="text/plain" rel="author" href="http://clearbold.com/humans.txt">
     <title>Rangkaian Online</title>
